frontend/src/styles/Pokedex.css
.pokedex-container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  padding: 0; /* Remover padding para usar toda la altura */
}

ul {
  list-style-type: none;
}

body {
  min-height: 100vh;
  margin: 0; /* Asegurar que no hay márgenes */
}

header {
  padding: 1rem 0;
  box-shadow: 0px 0px 2rem -1rem rgba(0, 0, 0, 0.5);
  flex-shrink: 0; /* Evitar que el header se encoja */
}

nav {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: flex-start;
  padding: 0 2rem;
  max-width: 1800px;
  margin: 0 auto;
}

.nav-list {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 1rem;
}

.btn-header {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--white-smoke);
  padding: var(--spacing-xs);
  border-radius: var(--radius-sm);
  cursor: pointer;
  transition: var(--transition-fast);
}

.btn-header img {
  width: 18px;
  height: auto;
  transition: var(--transition-fast);
}

#show-all {
  background-color: #000;
}

.btn-header:hover img {
  transform: scale(1.2);
}

/* Clase para aplicar el scale a la imagen */
.btn-header.shrink img {
  transform: scale(0.9);
}

/* Clase para aplicar el scale y grayscale al botón */
.btn-header.shrink {
  transform: scale(0.9);
  filter: grayscale(1);
  box-shadow: none !important;
  border-radius: 100%;
}

main {
  flex: 1; /* Ocupar todo el espacio restante */
  overflow: hidden; /* Evitar scroll en main */
  max-width: 1800px;
  margin: 0 auto;
  width: 100%;
  display: flex;
  flex-direction: column;
}

#container {
  flex: 1; /* Ocupar todo el espacio disponible en main */
  overflow-y: auto; /* Permitir scroll vertical */
  padding-inline: var(--spacing-sm); /* Mover el padding aquí */
  margin-block: var(--spacing-xl);
  display: flex;
  flex-direction: column;
}

.all-pokemons {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  flex: 1; /* Para que ocupe el espacio disponible */
}

@media screen and (min-width: 680px) {
  .all-pokemons {
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (min-width: 955px) {
  .all-pokemons {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media screen and (min-width: 1350px) {
  .all-pokemons {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
}

@media screen and (min-width: 1650px) {
  .all-pokemons {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  }
}

.pokedex-container .pokemon {
  border-radius: var(--radius-md);
  background-color: var(--white);
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0.07rem 0.2rem 0px;
  padding: var(--spacing-sm) 0;
  text-transform: uppercase;
  position: relative;
  isolation: isolate;
  overflow: hidden;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  opacity: 0;
  transform: scale(0.8);
  transition: var(--transition-slow);
}

.pokemon.visible {
  opacity: 1;
  transform: scale(1);
}

.pokemon-id-back {
  --pokemon-id: "";
  --pokemon-background: none;
  font-family: Rubik, "sans-serif";
  position: absolute;
  top: 1rem;
  left: 50%;
  transform: translateX(-50%);
  font-size: 8rem;
  font-weight: 800;
  z-index: -1;
  background-image: linear-gradient(0deg, var(--white-smoke), var(--white-smoke));
  color: transparent;
  background-clip: text;
}

.pokemon-id-back::before {
  position: absolute;
  content: var(--pokemon-id, "");
  inset: 0;
  z-index: -2;
  opacity: 0;
  transition: opacity 0.2s linear;
  font-size: 8rem;
  color: transparent;
  background-clip: text;
  background-image: var(--pokemon-background, none);
}

.pokemon:hover .pokemon-id-back::before {
  opacity: 0.45;
}

.pokemon:hover .pokedex-pokemon-img img {
  transform: scale(1.1);
  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4));
}

.pokedex-pokemon-img {
  padding: 0 1rem;
  display: flex;
  justify-content: center;
}

.pokedex-pokemon-img img {
  width: 96px;
  height: 96px;
  transition: transform 0.2s ease;
  filter: drop-shadow(2px 2px 1px rgba(0, 0, 0, 0.2));
}

.pokemon-info {
  display: flex;
  margin-top: var(--spacing-xs);
  flex-direction: column;
  gap: var(--spacing-xs);
  align-items: center;
  text-align: center;
}

.name-container {
  display: flex;
  gap: var(--spacing-sm);
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.pokemon-types-pokedex {
  display: flex;
  gap: var(--spacing-xs);
}

.pokemon-types-pokedex img {
  height: 18px;
}

.pokemon-stats {
  display: flex;
  gap: 1.5rem;
  font-size: 0.85rem;
}

.stat {
  background-color: var(--white-smoke);
  padding: 0.25rem 0.5rem;
  border-radius: 100vmax;
}

/* Fondo gris detrás del modal */
#overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(6.3px);
  z-index: 999;
}

.pokemon-detail-image {
  grid-area: 1 / 1 / 3 / 2;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

.pokemon-detail-image svg {
  width: 100%;
  height: 100%;
  transform: rotate(-45deg);
  position: absolute;
  z-index: -1;
  opacity: 0.5;
}

.pokedex-pokemon-img-modal {
  width: 100%;
  max-width: 18rem;
  filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.33));
}

.pokemon-information {
  grid-area: 3 / 1 / 4 / 2;
}
.pokemon-description {
  grid-area: 1 / 2 / 2 / 3;
}
.pokemon-stats-chart {
  grid-area: 2 / 2 / 3 / 3;
}
.pokemon-evolution-chain {
  grid-area: 3 / 2 / 4 / 3;
}

.evolution-stage {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  margin: 0 10px;
}

.evolution-image {
  width: 50px;
  height: 50px;
  object-fit: cover;
}

/* Style for stats */
.pokemon-stats-chart {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.stat-bar {
  display: flex;
  align-items: center;
  gap: 10px;
}

.stat-name,
.stat-value {
  font-size: 0.75rem;
  font-weight: 500;
  width: 70px;
  text-align: right;
}

.bar-container {
  flex: 1;
  background-color: var(--white-smoke);
  height: 0.5rem;
  border-radius: 1000px;
}

.bar {
  height: 100%;
  background: var(--type-grass);
  border-radius: 1000px;
}

.stat-value {
  text-align: left;
}

#load-more {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  margin: 1rem auto;
  padding: 0.625rem 1.25rem;
  font-size: 1rem;
  background-color: var(--clr-white);
  border-radius: 0.25rem;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0.07rem 0.2rem 0px;
  cursor: pointer;
}

